--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   width: 20%;
   padding: 5px 10px;
 }
-/* chat box */
+/* chat box scroll hidden */
 .chat-box::-webkit-scrollbar {
   display: none;
 }
@@ -39,18 +39,18 @@ body {
 .chat-container {
   padding: 10px 40px;
 }
-.me{
-    background: #098ac5;
-    width: 50%;
-    margin-right: auto;
-    border-bottom: 2px solid #1a1a1a;
-    padding: 10px;
+.me {
+  background: #098ac5;
+  width: 50%;
+  margin-right: auto;
+  border-bottom: 2px solid #1a1a1a;
+  padding: 10px;
 }
-.friend{
-    width: 50%;
-    background: #09ae6c;
-    border-bottom: 2px solid #1a1a1a;
-    padding: 10px;
-    text-align: right;
-    margin-left: auto;
+.friend {
+  width: 50%;
+  background: #09ae6c;
+  border-bottom: 2px solid #1a1a1a;
+  padding: 10px;
+  text-align: right;
+  margin-left: auto;
 }
